<resources>
    <string name="app_name">Applicationlogin</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="started_title">Hello world</string>
    <string name="started_sub_title">Nice to Meet You, Come Join our Community
        <br>
            <b>Login</b>
            if you already have an account
        </br>
        <br>
            <b>SignUp</b>
            To get Started
        </br>
    </string>
    <string name="illustration_img">Image component</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="login_title">Login to App</string>
    <string name="login_sub_title">
        <font color="#1B3D81">
            <b>Login</b>
        </font>
        if you already have an account
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">
        Your Email or Username
    </string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_forgot_pw">Forgot Password?</string>
    <string name="login_havent_account">
        I don\'t Have an Account
        <font color="#1B3D81">
            <b>Register</b>
        </font>
    </string>
    <string name="create_an_account">Create an Account</string>
    <string name="register_sub_title">
        <font color="#1B3D81">
            <b>Register</b>
        </font>
        To get Started with the App
    </string>
    <string name="register_name">Enter your Full name</string>
    <string name="register_username">Enter your Username</string>
    <string name="register_email">Your Email</string>
    <string name="have_account">
        Already have an Account?
        <font color="#1B3D81">
            <b>Login</b>
        </font>
    </string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_password">Password</string>
    <string name="home_title">Home</string>
    <string name="home_sub_title">"welcome you to the home page "</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_select">Select Image</string>
    <string name="btn_predict">Predict the Output</string>
    <string name="reset_pw_title">Reset your password</string>
    <string name="reset_pw_sub_title">
        <font color="#1B3D81">Reset Password</font>
        if you forgot your password.
    </string>
    <string name="btn_reset_pw">Reset Password</string>
    <string name="back_to_login">
        Back to
        <font color="#1B3D81">
            <b>Login</b>
        </font>
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="image_illustration_home">Image</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>


</resources>