<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:padding="20dp">

    <TextView
        android:id="@+id/tv_reset_pw_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        style="@style/Title"
        android:fontFamily="@font/montserrat"
        android:text="@string/reset_pw_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="56dp"/>

    <TextView
        android:id="@+id/tv_reset_pw_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="20dp"
        android:text="@string/reset_pw_sub_title"
        android:textSize="15sp"
        style="@style/SubTitle"
        tools:ignore="MissingConstraints" app:layout_constraintTop_toBottomOf="@+id/tv_reset_pw_title"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        style="@style/TextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/tv_reset_pw_sub_title"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:startIconDrawable="@drawable/ic_circle_account"
        app:layout_constraintHorizontal_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="48dp"
            android:paddingEnd="16dp"
            style="@style/TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_reset_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/btn_reset_pw"
        style="@style/ButtonGreen"
        app:layout_constraintBottom_toTopOf="@id/tv_back_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"/>


    <TextView
        android:id="@+id/tv_back_login"
        style="@style/SubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/back_to_login"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"/>

</androidx.constraintlayout.widget.ConstraintLayout>