<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        tools:context=".LoginActivity"
        android:padding="20dp">
    <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            style="@style/Title"
            android:fontFamily="@font/montserrat"
            android:text="@string/login_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="56dp"/>
    <TextView
            android:id="@+id/tv_login_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="20dp"
            android:text="@string/login_sub_title"
            android:textSize="15sp"
            style="@style/SubTitle"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_sub_title"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:startIconDrawable="@drawable/ic_circle_account"
            app:layout_constraintHorizontal_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="16dp"
                style="@style/TextInputEditText"

        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/prompt_password"
            android:inputType="textWebPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/black"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/username_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_lock"
            app:layout_constraintHorizontal_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="16dp"
                style="@style/TextInputEditText"
        />
        <TextView
                android:id="@+id/tv_forgot_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_forgot_pw"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:textAlignment="textEnd"
                style="@style/SubTitle"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_sign_in"
            style="@style/ButtonGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="1.0"/>


    <TextView
            android:id="@+id/tv_havent_account"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/login_havent_account"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"/>


</androidx.constraintlayout.widget.ConstraintLayout>