<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/primary_color"
        tools:context=".MainActivity"
        android:padding="20dp"
        >

    <TextView
            android:id="@+id/tv_started_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/started_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="36sp"
    />
    <TextView
            android:id="@+id/tv_started_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/started_sub_title"
            android:textColor="@color/white"
            android:lineHeight="20sp"
            android:layout_marginTop="15dp"
            android:textSize="14sp" tools:layout_editor_absoluteX="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_started_title"
    />

    <ImageView
            android:id="@+id/image_illustration_started"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/illustration_started"
            android:contentDescription="@String/Illustrationimage"
            tools:layout_editor_absoluteX="-125dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            style="@style/ButtonWhite"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="14dp"/>
    <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            style="@style/ButtonWhite"
            tools:layout_editor_absoluteY="621dp" tools:layout_editor_absoluteX="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

    />
</androidx.constraintlayout.widget.ConstraintLayout>