<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        android:padding="20dp"
        android:gravity="center"
        tools:context=".HomeActivity">

    <TextView
            android:id="@+id/home_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/home_title"
            style="@style/Title"
            android:layout_marginTop="325dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
    />
    <TextView
            android:id="@+id/home_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/home_sub_title"
            android:textStyle="bold"
            android:textAlignment="center"
            style="@style/SubTitle"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/home_title"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
    />
    <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_logout"
            style="@style/ButtonGreen"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/home_subtitle" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>