<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        android:padding="20dp"
        tools:context=".RegisterActivity">

    <TextView
            android:id="@+id/tv_register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/Title"
            android:fontFamily="@font/montserrat"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tv_register_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="9dp"
            android:text="@string/register_sub_title"
            android:textSize="15sp"
            style="@style/SubTitle"
            tools:ignore="MissingConstraints" app:layout_constraintTop_toBottomOf="@+id/tv_register_title"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="20dp"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tit_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/register_name"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_sub_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:startIconDrawable="@drawable/ic_account"
            app:layout_constraintHorizontal_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="16dp"
                style="@style/TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/black"
            android:hint="@string/register_email"
            android:inputType="textWebPassword"
            android:selectAllOnFocus="true"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/tit_fullname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_email"
            app:layout_constraintHorizontal_bias="0.0">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="16dp"
                style="@style/TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/register_username"
            android:inputType="textWebPassword"
            android:selectAllOnFocus="true"
            android:layout_marginTop="80dp"
            style="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_email"

            app:layout_constraintTop_toBottomOf="@+id/tit_fullname"
            app:layout_constraintHorizontal_bias="0.0">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="16dp"
                style="@style/TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:layout_marginTop="15dp"
            android:hint="@string/register_password"
            android:inputType="textWebPassword"
            android:selectAllOnFocus="true"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/tit_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_lock"
            app:layout_constraintHorizontal_bias="0.0">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="16dp"
                style="@style/TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tit_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/black"
            android:hint="@string/register_confirm_password"
            android:inputType="textWebPassword"
            android:selectAllOnFocus="true"
            style="@style/TextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/tit_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:startIconDrawable="@drawable/ic_lock"
            app:layout_constraintHorizontal_bias="0.0">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="48dp"
                android:paddingEnd="16dp"
                style="@style/TextInputEditText"
        />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_sign_in"
            style="@style/ButtonGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tit_confirm_password"
            app:layout_constraintVertical_bias="1.0"/>


    <TextView
            android:id="@+id/tv_have_account"
            style="@style/SubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/have_account"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"/>


</androidx.constraintlayout.widget.ConstraintLayout>